start adding sitemap

--- a/projects/kiwi-suite/ngx-admin/src/lib/components/kiwi-datatable/kiwi-datatable.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/components/kiwi-datatable/kiwi-datatable.component.html
@@ -1,5 +1,5 @@
 <div class="card card-accent-primary">
-  <div class="card-header py-2">
+  <div class="card-header">
     <div class="row align-items-center">
       <div class="col-sm-7"><h6 class="m-0 mt-1 mt-sm-0 text-center text-sm-left" [innerHTML]="tableTitle"></h6></div>
       <div class="col-sm mt-2 mt-sm-0">
