--- a/projects/kiwi-suite/ngx-admin/src/lib/views/page/page.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/page/page.component.html
@@ -3,6 +3,8 @@
     <button class="btn btn-primary">Save</button>
   </ng-template>
 
+  <kiwi-sitemap></kiwi-sitemap>
+
   fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>
   fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>
   fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>
