--- a/projects/kiwi-suite/ngx-admin/src/scss/ngx-admin.scss
+++ b/projects/kiwi-suite/ngx-admin/src/scss/ngx-admin.scss
@@ -17,6 +17,8 @@
 @import "~@ng-select/ng-select/themes/default.theme.css";
 @import "vendor/ng-select";
 
+@import "vendor/datepicker";
+
 @import "custom/layout";
 @import "custom/loading";
 @import "custom/media";
