--- a/projects/kiwi-suite/ngx-admin/src/lib/components/kiwi-sitemap/kiwi-sitemap.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/components/kiwi-sitemap/kiwi-sitemap.component.html
@@ -1,12 +1,4 @@
-<ng-container *ngIf="data$ | async as data">
-  <div class="row" >
-    <div class="col-sm-12 col-xs-12 col-md-3 col-lg-3 offset-md-9 offset-lg-9">
-    </div>
-  </div>
-
-</ng-container>
-
-<div class="card">
+<div class="card card-accent-primary">
   <div class="card-header">
     <div class="row align-items-center">
       <div class="col-sm"><h6 class="m-0 mt-1 mt-sm-0 text-center text-sm-left">Sitemap</h6></div>
@@ -18,11 +10,13 @@
   </div>
   <div class="card-body">
     <ng-container *ngIf="data$ | async as data; else isLoading">
-      <ng-container *ngIf="data.items.length > 0; else noPages">
-        {{ data | json }}
+      <ng-container *ngIf="data.length > 0; else noPages">
+        <ng-container *ngFor="let page of data">
+          <kiwi-sitemap-item [page]="page" [locale]="selectedLocale"></kiwi-sitemap-item>
+        </ng-container>
       </ng-container>
       <ng-template #noPages>
-        There are no Pages. Please create your first Page.
+        There are no pages - Please create a page first
       </ng-template>
     </ng-container>
     <ng-template #isLoading>
