--- a/projects/kiwi-suite/ngx-admin/src/scss/custom/_media.scss
+++ b/projects/kiwi-suite/ngx-admin/src/scss/custom/_media.scss
@@ -19,6 +19,15 @@
   border-radius: $border-radius;
   cursor: pointer;
 
+  &.is-invalid {
+    border-color: $danger;
+
+    .media-image-title {
+      color: #fff;
+      background: $danger;
+    }
+  }
+
   &:hover {
     border-color: $primary;
 
