--- a/projects/kiwi-suite/ngx-admin/src/lib/views/resource/create/resource-create.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/resource/create/resource-create.component.html
@@ -22,7 +22,7 @@
         </ng-template>
       </div>
       <div class="card-footer text-muted">
-        * Required Field
+        <b class="text-danger">*</b> Required Field
       </div>
     </div>
   </ng-container>
