--- a/projects/kiwi-suite/ngx-admin/src/lib/views/page/add/page-add.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/page/add/page-add.component.html
@@ -23,7 +23,7 @@
       </ng-template>
     </div>
     <div class="card-footer text-muted">
-      * Required Field
+      <b class="text-danger">*</b> Required Field
     </div>
   </div>
 </kiwi-content>
