--- a/projects/kiwi-suite/ngx-admin/src/lib/views/resource/edit/resource-edit.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/resource/edit/resource-edit.component.html
@@ -27,7 +27,7 @@
         </ng-template>
       </div>
       <div class="card-footer text-muted">
-        * Required Field
+        <b class="text-danger">*</b> Required Field
       </div>
     </div>
   </ng-container>
