--- a/projects/kiwi-suite/ngx-admin/src/lib/components/kiwi-confirm-modal/kiwi-confirm-modal.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/components/kiwi-confirm-modal/kiwi-confirm-modal.component.html
@@ -1,5 +1,5 @@
-<div class="modal-header bg-danger">
-  <h5 class="modal-title pull-left" [innerHtml]="title"></h5>
+<div class="modal-header bg-{{ confirmBtnType }}">
+  <h5 class="modal-title" [innerHtml]="title"></h5>
 </div>
 <div class="modal-body" [innerHtml]="text"></div>
 <div class="modal-footer">
