--- a/projects/kiwi-suite/ngx-admin/src/lib/views/auth/login/login.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/auth/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="app-body">
-  <div class="app-body-background" *ngIf="config.appConfig.project.background"
-       [style.backgroundImage]="'url(' + config.appConfig.project.background + ')'"></div>
+  <div class="app-body-background" *ngIf="config.config.project.background"
+       [style.backgroundImage]="'url(' + config.config.project.background + ')'"></div>
   <main class="main d-flex align-items-center">
     <div class="container">
       <div class="row">
@@ -8,8 +8,8 @@
           <div class="card-group">
             <div class="card p-4">
               <div class="card-body">
-                <div class="text-center mb-2" *ngIf="config.appConfig.project">
-                  <img src="{{ config.appConfig.project.logo }}" style="width: 100px; height: 100px;">
+                <div class="text-center mb-2" *ngIf="config.config.project">
+                  <img src="{{ config.config.project.logo }}" style="width: 100px; height: 100px;">
                 </div>
                 <form [formGroup]="form" (ngSubmit)="onLogin()" novalidate>
                   <div class="text-center">
