--- a/projects/kiwi-suite/ngx-admin/src/lib/views/resource/create/resource-create.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/resource/create/resource-create.component.html
@@ -5,25 +5,23 @@
     </button>
   </ng-template>
 
-  <ng-container *ngIf="data$ | async as data">
-    <div class="card card-accent-primary">
-      <div class="card-header custom-card-header">
-        <h6 class="m-0 text-center text-sm-left">Create a <b>{{ data.label }}</b></h6>
-      </div>
-      <div class="card-body">
-        <ng-container *ngIf="form && fields; else isLoading">
-          <formly-form [form]="form" [fields]="fields" [model]="data.item" class="kiwi-form" (ngSubmit)="onSubmit()">
-          </formly-form>
-        </ng-container>
-        <ng-template #isLoading>
-          <div class="text-center my-3 loading">
-            <kiwi-loading class="big-center"></kiwi-loading>
-          </div>
-        </ng-template>
-      </div>
-      <div class="card-footer text-muted">
-        <b class="text-danger">*</b> Required Field
-      </div>
+  <div class="card card-accent-primary">
+    <div class="card-header custom-card-header">
+      <h6 class="m-0 text-center text-sm-left">Create a <b>{{ resourceInfo.label }}</b></h6>
     </div>
-  </ng-container>
+    <div class="card-body">
+      <ng-container *ngIf="form && fields; else isLoading">
+        <formly-form [form]="form" [fields]="fields" class="kiwi-form" (ngSubmit)="onSubmit()">
+        </formly-form>
+      </ng-container>
+      <ng-template #isLoading>
+        <div class="text-center my-3 loading">
+          <kiwi-loading class="big-center"></kiwi-loading>
+        </div>
+      </ng-template>
+    </div>
+    <div class="card-footer text-muted">
+      <b class="text-danger">*</b> Required Field
+    </div>
+  </div>
 </kiwi-content>
