--- a/projects/kiwi-suite/ngx-admin/src/scss/custom/_layout.scss
+++ b/projects/kiwi-suite/ngx-admin/src/scss/custom/_layout.scss
@@ -1,3 +1,11 @@
+.btn-outline-input {
+  @include button-outline-variant($input-border-color);
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
 .pointer-events-none {
   pointer-events: none;
 }
