--- a/projects/kiwi-suite/ngx-admin/src/scss/ngx-admin.scss
+++ b/projects/kiwi-suite/ngx-admin/src/scss/ngx-admin.scss
@@ -17,6 +17,9 @@
 @import "~@ng-select/ng-select/themes/default.theme.css";
 @import "vendor/ng-select";
 
+@import "~primeicons/primeicons.css";
+@import "~primeng/resources/primeng.css";
+@import "~primeng/resources/themes/bootstrap/theme.css";
 @import "vendor/datepicker";
 
 @import "custom/layout";
