--- a/projects/kiwi-suite/ngx-admin/src/scss/ngx-admin.scss
+++ b/projects/kiwi-suite/ngx-admin/src/scss/ngx-admin.scss
@@ -20,7 +20,7 @@
 @import "~primeicons/primeicons.css";
 @import "~primeng/resources/primeng.css";
 @import "~primeng/resources/themes/bootstrap/theme.css";
-@import "vendor/datepicker";
+@import "vendor/primeng";
 
 @import "custom/layout";
 @import "custom/loading";
