added quill editor

--- a/projects/kiwi-suite/ngx-admin/src/scss/ngx-admin.scss
+++ b/projects/kiwi-suite/ngx-admin/src/scss/ngx-admin.scss
@@ -22,6 +22,9 @@
 @import "~primeng/resources/themes/bootstrap/theme.css";
 @import "vendor/primeng";
 
+@import "~quill/dist/quill.snow.css";
+@import "vendor/quill";
+
 @import "custom/layout";
 @import "custom/loading";
 @import "custom/media";
