--- a/projects/kiwi-suite/ngx-admin/src/scss/custom/_forms.scss
+++ b/projects/kiwi-suite/ngx-admin/src/scss/custom/_forms.scss
@@ -65,3 +65,36 @@ a.input-group-text {
     margin: -7px 0 0 -9px;
   }
 }
+
+.color-picker-preview {
+  height: 33px;
+  width: 42px;
+  @include border-radius($input-border-radius 0 0 $input-border-radius)
+}
+
+color-picker .color-picker {
+  border: 0;
+  margin-top: -5px;
+
+  .arrow {
+    display: none;
+  }
+
+  &:before {
+    content: '';
+    position: absolute;
+    top: -7px;
+    left: -7px;
+    right: -7px;
+    bottom: -7px;
+    box-shadow: $box-shadow;
+    border-radius: $border-radius;
+    background: #fff;
+    z-index: -1;
+  }
+
+  input {
+    @extend .form-control;
+    border-color: $input-border-color !important;
+  }
+}
