fix checkbox element

--- a/projects/kiwi-suite/ngx-admin/src/scss/custom/_forms.scss
+++ b/projects/kiwi-suite/ngx-admin/src/scss/custom/_forms.scss
@@ -27,6 +27,10 @@
     @include media-breakpoint-up(sm) {
       .form-group {
         display: flex;
+
+        &.center-label {
+          align-items: center;
+        }
       }
 
       .kiwi-form-label {
