added form elements

--- a/projects/kiwi-suite/ngx-admin/src/scss/custom/_forms.scss
+++ b/projects/kiwi-suite/ngx-admin/src/scss/custom/_forms.scss
@@ -19,7 +19,7 @@
     margin-bottom: .5rem;
   }
 
-  formly-field:last-child .form-group {
+  formly-field:last-child > formly-wrapper-form-field > .form-group {
     margin-bottom: 0;
   }
 
