--- a/projects/kiwi-suite/ngx-admin/src/scss/ngx-admin.scss
+++ b/projects/kiwi-suite/ngx-admin/src/scss/ngx-admin.scss
@@ -25,6 +25,8 @@
 @import "~quill/dist/quill.snow.css";
 @import "vendor/quill";
 
+@import "~@swimlane/ngx-dnd/release/index.css";
+
 @import "custom/layout";
 @import "custom/loading";
 @import "custom/media";
