--- a/projects/kiwi-suite/ngx-admin/src/lib/views/page/edit/page-edit.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/page/edit/page-edit.component.html
@@ -1,30 +1,12 @@
 <kiwi-content>
   <ng-template #headerButtons>
-    <button class="btn btn-success" (click)="onSubmit()" [disabled]="!form.valid">
-      <i class="fa fa-plus"></i> Create
+    <button class="btn btn-primary" (click)="onSubmit()">
+      <i class="fa fa-save"></i> Update
     </button>
   </ng-template>
 
-  <ng-container *ngIf="data$ | async as data">
-    <div class="card card-accent-primary">
-      <div class="card-header custom-card-header">
-        <h6 class="m-0 text-center text-sm-left">Create a <b>Page</b></h6>
-      </div>
-      <div class="card-body">
-        <ng-container *ngIf="form && fields; else isLoading">
-          <formly-form [form]="form" [fields]="fields" [model]="data.item" class="kiwi-form" (ngSubmit)="onSubmit()">
-          </formly-form>
-        </ng-container>
-        <ng-template #isLoading>
-          <div class="text-center my-3 loading">
-            <kiwi-loading class="big-center"></kiwi-loading>
-          </div>
-        </ng-template>
-      </div>
-      <div class="card-footer text-muted">
-        <b class="text-danger">*</b> Required Field
-      </div>
-    </div>
+  <ng-container *ngIf="detailData$ | async as data">
+    <kiwi-page-version-edit [id]="data.item.id"></kiwi-page-version-edit>
   </ng-container>
 
   <ng-template #aside>
