--- a/projects/kiwi-suite/ngx-admin/src/lib/components/kiwi-page-version/kiwi-page-version-edit.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/components/kiwi-page-version/kiwi-page-version-edit.component.html
@@ -1,20 +1,10 @@
-<ng-container *ngIf="data$ | async as data">
-  <div class="card card-accent-primary">
-    <div class="card-header custom-card-header">
-      <h6 class="m-0 text-center text-sm-left">Edit a <b>Page</b></h6>
-    </div>
-    <div class="card-body">
-      <ng-container *ngIf="form && fields; else isLoading">
-        <formly-form [form]="form" [fields]="fields" [model]="data.item" class="kiwi-form kiwi-form-inline"></formly-form>
-      </ng-container>
-      <ng-template #isLoading>
-        <div class="text-center my-3 loading">
-          <kiwi-loading class="big-center"></kiwi-loading>
-        </div>
-      </ng-template>
-    </div>
-    <div class="card-footer text-muted">
-      <b class="text-danger">*</b> Required Field
-    </div>
-  </div>
+<ng-container *ngIf="data$ | async as data; else isLoading">
+    <ng-container *ngIf="form && fields">
+      <formly-form [form]="form" [fields]="fields" [model]="data.item" class="kiwi-form kiwi-form-inline"></formly-form>
+    </ng-container>
 </ng-container>
+<ng-template #isLoading>
+  <div class="text-center my-3 loading">
+    <kiwi-loading class="big-center"></kiwi-loading>
+  </div>
+</ng-template>
