--- a/projects/kiwi-suite/ngx-admin/src/scss/custom/_forms.scss
+++ b/projects/kiwi-suite/ngx-admin/src/scss/custom/_forms.scss
@@ -125,6 +125,10 @@ $dynamic-form-color: $border-color;
 .form-dynamic-container {
   border-top: 1px solid $border-color;
   margin: 0 (-$spacer);
+
+  &.no-childs {
+    border-top: 0;
+  }
 }
 
 .form-dynamic {
@@ -132,8 +136,13 @@ $dynamic-form-color: $border-color;
   box-shadow: $box-shadow-sm;
   margin: $spacer;
 
+  &:first-child {
+    margin-top: 0;
+  }
+
   &.collapsed {
     .form-dynamic-header {
+      /*
       .btn-move {
         @include border-radius($border-radius 0 0 $border-radius);
       }
@@ -141,6 +150,7 @@ $dynamic-form-color: $border-color;
       .btn-remove {
         @include border-radius(0 $border-radius $border-radius 0);
       }
+      */
 
       .btn-toggle {
         i {
@@ -207,11 +217,28 @@ $dynamic-form-color: $border-color;
     border-top: 0;
     padding: $spacer;
     @include border-radius(0 0 $border-radius $border-radius);
+
+    &.collapsed {
+      max-height: 50px;
+      overflow: hidden;
+      position: relative;
+
+      &:after {
+        content: '';
+        position: absolute;
+        @include gradient-y(rgba(255, 255, 255, 0), #fff);
+        bottom: 0;
+        left: 0;
+        right: 0;
+        height: 50px;
+        @include border-radius(0 0 $border-radius $border-radius);
+      }
+    }
   }
 }
 
 .form-dynamic-toggles {
-  margin: ($spacer/2) $spacer (-$spacer/2);
+  margin: ($spacer/2) $spacer ($spacer/2);
 }
 
 .form-dynamic-footer {
