--- a/projects/kiwi-suite/ngx-admin/src/scss/custom/_forms.scss
+++ b/projects/kiwi-suite/ngx-admin/src/scss/custom/_forms.scss
@@ -159,7 +159,7 @@ $dynamic-form-color: $border-color;
   }
 
   &.is-invalid {
-    .form-dynamic-header {
+    > .form-dynamic-header {
       .btn-move {
         background: darken($danger, 5%);
       }
@@ -185,7 +185,7 @@ $dynamic-form-color: $border-color;
       }
     }
 
-    .form-dynamic-content {
+    > .form-dynamic-content {
       border-color: $danger;
     }
   }
