--- a/projects/kiwi-suite/ngx-admin/src/lib/containers/default-layout/default-layout.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/containers/default-layout/default-layout.component.html
@@ -42,13 +42,19 @@
         </div>
       </div>
     </div>
-
     <router-outlet (activate)="onRouterOutletActivate($event)"></router-outlet>
   </main>
 
   <kiwi-aside [visible]="!!aside">
     <ng-container *ngTemplateOutlet="aside"></ng-container>
   </kiwi-aside>
+</div>
+
+<div class="copy-info alert alert-info" *ngIf="copiedBlock">
+  You have copied a block with the type "{{ copiedBlock._type }}". You can add it to any allowed location.
+  <div class="text-right mt-2">
+    <button class="btn btn-link p-0" (click)="cancelCopy()">Cancel Copy</button>
+  </div>
 </div>
 
 <app-footer>
