--- a/projects/kiwi-suite/ngx-admin/src/scss/custom/_layout.scss
+++ b/projects/kiwi-suite/ngx-admin/src/scss/custom/_layout.scss
@@ -19,6 +19,28 @@
   padding: 7px 1.25rem;
 }
 
+@each $color, $value in $theme-colors {
+  .dropdown-item-#{$color} {
+    &, i {
+      color: $value;
+    }
+
+    &:focus,
+    &:hover {
+      color: $value;
+    }
+
+    &:active,
+    &.active {
+      background: $value;
+
+      &, i {
+        color: #fff;
+      }
+    }
+  }
+}
+
 .custom-card-header {
   padding-top: 10px;
   padding-bottom: 10px;
@@ -164,4 +186,13 @@
     border-top-left-radius: 0.2rem;
     border-top-right-radius: 0.2rem;
   }
+}
+
+.copy-info {
+  position: fixed;
+  right: 15px;
+  bottom: 15px;
+  box-shadow: $box-shadow;
+  z-index: 1100;
+  max-width: 240px;
 }
