fix performance issue

--- a/projects/kiwi-suite/ngx-admin/src/scss/custom/_forms.scss
+++ b/projects/kiwi-suite/ngx-admin/src/scss/custom/_forms.scss
@@ -183,6 +183,10 @@ $dynamic-form-color: $border-color;
       .form-dynamic-title {
         background: $danger;
       }
+
+      .form-dynamic-input {
+        background: $danger;
+      }
     }
 
     > .form-dynamic-content {
