--- a/projects/kiwi-suite/ngx-admin/src/scss/custom/_forms.scss
+++ b/projects/kiwi-suite/ngx-admin/src/scss/custom/_forms.scss
@@ -324,3 +324,36 @@ formly-form > formly-field:last-child > formly-wrapper-form-field-only > * > * >
 formly-wrapper-validation-messages > div > .invalid-feedback {
   display: none !important;
 }
+
+.input-group-select-wrapper {
+  position: relative;
+
+  .input-group-select {
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
+    border: none;
+    padding: 0 15px 0 5px;
+    background: transparent;
+    color: inherit;
+
+    &:focus {
+      outline: 0;
+    }
+  }
+
+  &:after {
+    pointer-events: none;
+    font-size: 20px;
+    position: absolute;
+    right: 5px;
+    top: 50%;
+    margin-top: -1.5px;
+    border-top: 4px solid;
+    border-right: 4px solid transparent;
+    border-bottom: 0;
+    border-left: 4px solid transparent;
+    content: '';
+  }
+}
+
