--- a/projects/kiwi-suite/ngx-admin/src/scss/ngx-admin.scss
+++ b/projects/kiwi-suite/ngx-admin/src/scss/ngx-admin.scss
@@ -27,6 +27,8 @@
 
 @import "~@swimlane/ngx-dnd/release/index.css";
 
+@import "~ol/ol.css";
+
 @import "custom/layout";
 @import "custom/loading";
 @import "custom/media";
