replace open layers with google map

--- a/projects/kiwi-suite/ngx-admin/src/lib/modals/kiwi-map-modal/kiwi-map-modal.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/modals/kiwi-map-modal/kiwi-map-modal.component.html
@@ -25,7 +25,7 @@
       </div>
     </div>
   </div>
-  <div id="modal_map" class="modal-map"></div>
+  <div #gmap class="modal-map"></div>
 </div>
 <div class="modal-footer">
   <button type="button" class="btn btn-{{ confirmBtnType }}" (click)="confirm()">
