--- a/projects/kiwi-suite/ngx-admin/src/lib/views/media/media.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/media/media.component.html
@@ -1,3 +1,3 @@
 <kiwi-content>
-  <kiwi-media-list></kiwi-media-list>
+  <kiwi-media-list (select)="onSelect($event)"></kiwi-media-list>
 </kiwi-content>
