--- a/projects/kiwi-suite/ngx-admin/src/lib/views/media/edit/media-edit.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/media/edit/media-edit.component.html
@@ -23,7 +23,9 @@
             [maintainAspectRatio]="maintainAspectRatio"
             [aspectRatio]="aspectRatio"
             [cropper]="cropData"
-            (imageCroppedBase64)="imageCropped($event)">
+            [minWidth]="minWidth"
+            [minHeight]="minHeight"
+            (cropped)="onCrop($event)">
           </kiwi-image-cropper>
         </ng-container>
 
